charts/mediaserver/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: "docker.io/linuxserver/prowlarr:develop"
          imagePullPolicy: IfNotPresent
          readinessProbe:
            tcpSocket:
              port: 9696
            initialDelaySeconds: 10
            periodSeconds: 20
          ports:
            - name: prowlarr-port
              containerPort: 9696
              protocol: TCP
          volumeMounts:
            - name: mediaserver-volume
              mountPath: "/config"
              subPath: "config/prowlarr"
      volumes:
        - name: mediaserver-volume
          hostPath:
            path: /mnt/media
        - name: init-files-prowlarr
          configMap:
            defaultMode: 493
            name: init-prowlarr-cm
