charts/mediaserver/prowlarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: prowlarr.png
    gethomepage.dev/name: Prowlarr
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - prowlarr.int.imdevinc.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prowlarr
          namespace: mediaserver
          port: 9696
